--- a/Modulo02 HTML & CSS/codePark 03 HTML&CSS UsandoTags/codePark 03 HTML&CSS UsandoTags/style.css
+++ b/Modulo02 HTML & CSS/codePark 03 HTML&CSS UsandoTags/codePark 03 HTML&CSS UsandoTags/style.css
@@ -5,15 +5,11 @@
 }
   
 :root {
-    --brand-color: #fae454;
+    --brand-color: #2ecc71;
     --dark-10: #13131f;
     --dark-20: #282830;
     --dark-30: #c4c4c4;
     --dark-40: #fefbfb;
-    --support-01: #2962ff;
-    --support-02: #0bb07b;
-    --support-03: #ffce52;
-    --support-04: #f03d3d;
     --support-05: #e0e0e0;
 }
   
@@ -39,6 +35,7 @@ nav {
     display: flex;
     width: 52vw;
     justify-content: flex-end;
+    text-decoration: none;
 }
   
 ul {
